--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": "COLOCAR SUA CONNECTION STRING AQUI"
+    "ConexaoPadrao": "Server=localhost;Initial Catalog=Organizado;Integrated Security=True;TrustServerCertificate=True"
   }
+
+
 }
